@@ -2,6 +2,7 @@
 
 
 
+  o fixed Coq output for polymorphic inductive predicates
   * calls to prover can now be asynchronous 
     Driver.prove_task now returns some intermediate value (of type
     prover_call), which can be queried in two ways:
